tests/should_fail/let_destructure_tuple_on_bool.nv
module test
// let destructure: tuple on Bool (not a tuple)
let (a, b) = true
